# old_muni_code

./: studis - unix
Algorithms - Python/: README.md  du01_linkedlist.py  du02_circularlist.py  du03_find_first.py  du04_trit_sum.py  du06_canonical_heap.py  du07_binary_trees.py  du09_ballanced_bst.py  du10_filesystem.py  du11_graph_algorithms.py  du12_graph_relation.py  duspec_zadani.py
C/: README.md
C++/: README.md  script.sh
C++/00/: 0_intro.txt  1_overview.txt  2_grading.txt  3_tasks.txt  4_reviews.txt  5_quality.txt  6_exam.txt  7_plagiarism.txt
C++/01/: d2_hamming.cpp  d3_hero.cpp  e1_predicates.cpp  e2_palindrome.cpp  e3_pascal.cpp  f1_wrap.cpp  f2_digits.cpp  f3_sieve.cpp  f4_bsearch.cpp  g1_counting.cpp  g2_fraction.cpp  g3_words.cpp  g4_account.cpp  g5_shapes.cpp  g6_contacts.cpp  intro.txt
C++/02/: e1_fibonacci.cpp  e2_normalize.cpp  e3_accumulate.cpp  f1_euler.cpp  f2_approx.cpp  f3_solve.cpp  g1_rewrap.cpp  g2_golden.cpp  g3_divisors.cpp  g4_midpoints.cpp  g5_higher.cpp  g6_fixpoint.cpp  intro.txt
C++/03/: e1_unique.cpp  e2_reflexive.cpp  e3_normalize.cpp  f1_mode.cpp  f2_buckets.cpp  f3_shortest.cpp  g1_brackets.cpp  g2_connected.cpp  g3_dag.cpp  g4_rel.cpp  g5_numbers.cpp  g6_bipartite.cpp  intro.txt
C++/04/: CMakeLists.txt  d4_pool.cpp  e1_diameter.cpp  e2_circle.cpp  e3_index.cpp  f1_complex.cpp  f3_search.cpp  g1_format.cpp  g2_least.cpp  g3_area.cpp  g4_zipper.cpp  g5_rpn.cpp  g6_eval.cpp  intro.txt
C++/05/: CMakeLists.txt  d1_arithmetic.cpp  d2_relational.cpp  d3_access.cpp  d4_convert.cpp  d5_files.cpp  d6_streams.cpp  d7_format.cpp  e1_cartesian.cpp  e2_force.cpp  e3_forcefmt.cpp  f1_poly.cpp  f2_csv.cpp  f3_set.cpp  g1_polar.cpp  g2_rational.cpp  g3_tmpfile.cpp  g4_nibble.cpp  g5_grep.cpp  g6_fixnum.cpp  intro.txt
C++/06/: CMakeLists.txt  d1_exceptions.cpp  d2_stdexcept.cpp  d3_semaphore.cpp  d4_swarm.cpp  e1_default.cpp  e2_counter.cpp  e3_coffee.cpp  g1_fd.cpp  g2_loan.cpp  g3_library.cpp  g4_parse.cpp  g5_invest.cpp  g6_linear.cpp  intro.txt
C++/07/: CMakeLists.txt  d1_queue.cpp  d2_finexp.cpp  d3_expr.cpp  d4_family.cpp  e1_dynarray.cpp  e2_list.cpp  f1_circular.cpp  f2_zipper.cpp  f3_segment.cpp  f4_diff.cpp  g1_unrolled.cpp  g2_bittrie.cpp  g3_solid.cpp  g4_chartrie.cpp  g5_bdd.cpp  g6_rope.cpp  intro.txt
C++/08/: CMakeLists.txt  d1_account.cpp  d2_shapes.cpp  d3_expr.cpp  d4_destroy.cpp  d5_factory.cpp  e1_resistance.cpp  e2_perimeter.cpp  e3_fight.cpp  f1_bom.cpp  f2_circuit.cpp  f3_loops.cpp  g1_prisoner.cpp  g2_bexpr.cpp  g3_sexpr.cpp  g4_network.cpp  g5_filter.cpp  g6_geometry.cpp  intro.txt
C++/09/: CMakeLists.txt  d1_zipper.cpp  d2_expr.cpp  d3_fold.cpp  d4_rel.cpp  e1_iota.cpp  e2_quot.cpp  e3_split.cpp  f1_tfold.cpp  f2_tmap.cpp  f3_monoid.cpp  g1  g1_circular.cpp  g2_buffer.cpp  g3  g3_stats.cpp  g4_sparse.cpp  g5_bbox.cpp  g6_visit.cpp  intro.txt
C++/10/: CMakeLists.txt  d1_apply.cpp  d2_method.cpp  d3_expr.cpp  d4_set.cpp  d5_call.cpp  e1_format.cpp  e2_concat.cpp  e3_select.cpp  f1_icons.cpp  f2_sorted.cpp  f3_fsm.cpp  g1_post.cpp  g2_cons.cpp  g3_map.cpp  g4_collect.cpp  g5_list.cpp  g6_tree.cpp  intro.txt
C++/11/: CMakeLists.txt  d1_queue.cpp  e1_iota.cpp  e2_view.cpp  e3_skip.cpp  f1_map.cpp  f2_range.cpp  f3_permute.cpp  g1_seq.cpp  g2_filter.cpp  g3_zip.cpp  g4_nibble.cpp  g5_tree.cpp  g6_scan.cpp  intro.txt
C++/12/: CMakeLists.txt  e1_digraph.cpp  e2_spelling.cpp  e3_ternary.cpp  f1_trie.cpp  f2_cooking.cpp  f3_cards.cpp  g1_chords.cpp  g2_grammar.cpp  g3_linear.cpp  g4_poly.cpp  g5_queens.cpp  g6_map.cpp  intro.txt
C++/exam/: 1a_tree.cpp  1b_expr.cpp  1c_trie.cpp  CMakeLists.txt
C++/pex/: 1a_hamilton.cpp  1b_rpn.cpp  1c_shuffle.cpp  2a_colours.cpp  2b_parse.cpp  2c_packed.cpp  CMakeLists.txt  intro.txt
C++/sol/: 01.e1_predicates.cpp  01.e2_palindrome.cpp  01.e3_pascal.cpp  01.f1_wrap.cpp  01.f2_digits.cpp  01.f3_sieve.cpp  01.f4_bsearch.cpp  02.e1_fibonacci.cpp  02.e2_normalize.cpp  02.e3_accumulate.cpp  02.f1_euler.cpp  02.f2_approx.cpp  02.f3_solve.cpp  03.e1_unique.cpp  03.e2_reflexive.cpp  03.e3_normalize.cpp  03.f1_mode.cpp  03.f2_buckets.cpp  03.f3_shortest.cpp  04.e1_diameter.cpp  04.e2_circle.cpp  04.e3_index.cpp  04.f1_complex.cpp  04.f3_search.cpp  05.e1_cartesian.cpp  05.e2_force.cpp  05.e3_forcefmt.cpp  05.f1_poly.cpp  05.f2_csv.cpp  05.f3_set.cpp  06.e1_default.cpp  06.e2_counter.cpp  06.e3_coffee.cpp  07.e1_dynarray.cpp  07.e2_list.cpp  07.f1_circular.cpp  07.f2_zipper.cpp  07.f3_segment.cpp  07.f4_diff.cpp  08.e1_resistance.cpp  (+29 more)
C++/t1/: CMakeLists.txt  cellular.cpp  cellular.hpp  chess.cpp  chess.hpp  intro.txt  magic.cpp  magic.hpp  reversi.cpp  reversi.hpp
C++/t2/: CMakeLists.txt  complex.cpp  complex.hpp  intro.txt  machine.cpp  machine.hpp  natural  natural.cpp  natural.hpp  parser.cpp  parser.hpp
C++/t3/: CMakeLists.txt  bplus.cpp  bplus.hpp  intro.txt  linalg.cpp  linalg.hpp  lisp.cpp  lisp.hpp  postorder.py  tree.cpp  tree.hpp
C/hw01/: ascii85.c  assignment.ad
C/hw03/: CMakeLists.txt  assignment.ad  compiler.c  cpu.c  cpu.h  main.c
C/hw03/input_data/: alphabet  circle  dungeon
C/hw04/: CMakeLists.txt  assignment.ad  main.c
C/hw04/input_data/: 01_dot.txt  01_hrany.csv  01_uzly.csv  02_dot.txt  02_hrany.csv  02_uzly.csv  03_dot.txt  03_hrany.csv  03_uzly.csv  ASEdges.csv  ASNodes.csv
C/seminar-07/: CMakeLists.txt  assignment.adoc  list.c  list.h  list_utils.c
C/seminar-07/tests/: bonus_tests.c  test_utils.c  test_utils.h  tests.c
Declarative programming/: README.md  cviko02.hs  cviko03.hs  cviko04.hs  cviko05.hs  cviko06.hs  cviko08.hs  cviko09.pl  cviko10.pl  odpovednik3.hs  odpovednik4.hs  odpovednik5.hs  odpovednik6.hs  odpovednik7.hs  odpovednik8.hs  odpovednik9.pl  zapocet.hs  zapocet.pl
Java/: README.md
Python introduction/: README.md  SN.py  cviko1.py  cviko10.py  cviko11.py  cviko2.py  cviko3.py  cviko5.py  cviko6.py  cviko7.py  cviko8.py  cviko9.py  vnitro1.py  vnitro2.py
Simulations/: .gitignore  README.md  analysis.docx  sus_fishing.nlogo
Statistics/: README.md  odpovednik4.R  odpovednik5.R  odpovednik6.R  testování_cheatsheet.txt
(+1040 files in other folders)
