cmake_minimum_required(VERSION 3.17)
project(06)

set(CMAKE_CXX_STANDARD 17)

add_executable(g1_fd g1_fd.cpp)
add_executable(g2_loan g2_loan.cpp)
add_executable(g3_library g3_library.cpp)
add_executable(g4_parse g4_parse.cpp)
add_executable(g5_invest g5_invest.cpp)
add_executable(g6_linear g6_linear.cpp)
