cmake_minimum_required(VERSION 3.19)
project(08)

set(CMAKE_CXX_STANDARD 17)

add_executable(g1_prisoner g1_prisoner.cpp)
add_executable(g2_bexpr g2_bexpr.cpp)
add_executable(g3_sexpr g3_sexpr.cpp)
add_executable(g4_network g4_network.cpp)
add_executable(g5_filter g5_filter.cpp)
add_executable(g6_geometry g6_geometry.cpp)

