# cmake_minimum_required(VERSION <specify CMake version here>)
project(10)

set(CMAKE_CXX_STANDARD 17)

add_executable(g1_post g1_post.cpp)
add_executable(g2_cons g2_cons.cpp)
add_executable(g3_map g3_map.cpp)
add_executable(g4_collect g4_collect.cpp)
add_executable(g5_list g5_list.cpp)
add_executable(g6_tree g6_tree.cpp)
