cmake_minimum_required(VERSION 3.20)
project(12)

set(CMAKE_CXX_STANDARD 17)

add_executable(g1_chords g1_chords.cpp)
add_executable(g2_grammar g2_grammar.cpp)
add_executable(g3_linear g3_linear.cpp)
add_executable(g4_poly g4_poly.cpp)
add_executable(g5_queens g5_queens.cpp)
add_executable(g6_map g6_map.cpp)
