cmake_minimum_required(VERSION 3.20)
project(pex)

set(CMAKE_CXX_STANDARD 17)

add_executable(1a_hamilton 1a_hamilton.cpp)
add_executable(1b_rpn 1b_rpn.cpp)
add_executable(1c_shuffle 1c_shuffle.cpp)
add_executable(2a_colours 2a_colours.cpp)
add_executable(2b_parse 2b_parse.cpp)
add_executable(2c_packed 2c_packed.cpp)
